Hoàn thiện addPricePage